<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_wifi"
        android:icon="@drawable/ic_tab_wifi"
        android:title="@string/tab_wifi" />
    <item
        android:id="@+id/nav_devices"
        android:icon="@drawable/ic_tab_devices"
        android:title="@string/tab_devices" />
    <item
        android:id="@+id/nav_speed"
        android:icon="@drawable/ic_tab_speed"
        android:title="@string/tab_speed" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/tab_settings" />
</menu>
